--- a/overflow.vcxproj
+++ b/overflow.vcxproj
@@ -145,6 +145,7 @@
     <None Include="src\scene\README.md" />
     <None Include="src\shaders\fragment\droplets.frag" />
     <None Include="src\shaders\fragment\terrain.frag" />
+    <None Include="src\shaders\geometry\terrain.geom" />
     <None Include="src\shaders\vertex\droplets.vert" />
     <None Include="src\shaders\vertex\terrain.vert" />
     <None Include="vendor\include\glm\detail\func_common.inl" />
